--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
+      <a href="https://batmann003.github.io/crossdomainweb2/"> https://crossdomian1.netlify.app/</a>
     </nav>
   </header>
 
